--- a/index.html
+++ b/index.html
@@ -94,35 +94,60 @@
   </div>
   <!--/ Carousel end /-->
 
-  <!--/ CarePLUS’s Goal Star /-->
-  <section class="section-services section-t8">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="title-wrap d-flex justify-content-between">
-            <div class="title-box">
-              <h2 class="title-a">CarePLUS’s Goal</h2>
+  <!--/ Intro Single star /-->
+  <section class="intro-single-f">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-lg-8">
+            <div class="title-single-box">
+              <h1 class="title-single">Our mission </h1>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    </div>
-  </section>
-  <!--/ CarePLUS’s Goal End /-->
+    </section>
+    <!--/ Intro Single End /-->
+
+  <!--/ Goal Star /-->
+  <section class="section-goal">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="about-img-box">
+              <img src="img/goal.png" alt="" class="img-fluid">
+            </div>
+            <div class="sinse-box">
+              <h3 class="sinse-title">Device
+                <br>& APP</h3>
+            </div>
+          </div>
+          <div class="col-sm-12 mt-4">
+            <p>
+              To be continued.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--/ Goal End /-->
+
+  <!--/ Intro Single star /-->
+  <section class="intro-single-f">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-lg-8">
+            <div class="title-single-box">
+              <h1 class="title-single">How CarePLUS works</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--/ Intro Single End /-->
 
   <!--/ Installation Star /-->
-  <section class="section-services section-t8">
+  <section class="section-services">
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="title-wrap d-flex justify-content-between">
-            <div class="title-box">
-              <h2 class="title-a">How CarePLUS works</h2>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="row">
         <div class="col-md-12">
           <div class="card-box-c foo">
@@ -180,25 +205,30 @@
   </section>
   <!--/ Installation  End /-->
 
-  <!--/ Technique Star /-->
-  <section class="section-services section-t8">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="title-wrap d-flex justify-content-between">
-            <div class="title-box">
-              <h2 class="title-a">Technique</h2>
+  <!--/ Intro Single star /-->
+  <section class="intro-single-f">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-lg-8">
+            <div class="title-single-box">
+              <h1 class="title-single">Technique</h1>
             </div>
           </div>
         </div>
       </div>
+    </section>
+    <!--/ Intro Single End /-->
+
+  <!--/ Technique Star /-->
+  <section class="section-services">
+    <div class="container">
       <div class="row">
         <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c">
-              <div class="card-box-ico justify-content-center">
+              <div class="card-box-ico card-box-tech justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/technique_001.png" width="100%">
+                <img src="img/technique_001.png">
                 <h2 class="title-f">Privacy Preserving</h2>
               </div>
             </div>
@@ -207,9 +237,9 @@
         <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c">
-              <div class="card-box-ico justify-content-center">
+              <div class="card-box-ico card-box-tech justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/technique_002.png" width="100%">
+                <img src="img/technique_002.png">
                 <h2 class="title-f">Fast Adapting</h2>
               </div>
             </div>
@@ -218,9 +248,9 @@
         <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c">
-              <div class="card-box-ico justify-content-center">
+              <div class="card-box-ico card-box-tech justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/technique_003.png" width="100%">
+                <img src="img/technique_003.png">
                 <h2 class="title-f">Human-centered AI</h2>
               </div>
             </div>
@@ -232,29 +262,34 @@
   </section>
   <!--/ Technique  End /-->
 
-  <!--/ Device Features Star /-->
-  <section class="section-services section-t8">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="title-wrap d-flex justify-content-between">
-            <div class="title-box">
-              <h2 class="title-a">Device Features</h2>
+  <!--/ Intro Single star /-->
+  <section class="intro-single-f">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-lg-8">
+            <div class="title-single-box">
+              <h1 class="title-single">Device Features</h1>
             </div>
           </div>
         </div>
       </div>
+    </section>
+    <!--/ Intro Single End /-->
+
+  <!--/ Device Features Star /-->
+  <section class="section-services">
+    <div class="container">
       <div class="row">
         <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <div class="icon-hover" id="panorama">
-                  <img src="img/panorama.png" width="50%">
-                  <h2 class="title-f">360 Panorama</h2>
-                  <p>Seeing all entrance.</p>
+                  <div class="icon-hover" id="panorama">
+                    <img src="img/panorama.png" width="50%">
+                    <h2 class="title-f">360 Panorama</h2>
                 </div>
+                <p>Seeing all entrance.</p>
               </div>
             </div>
           </div>
@@ -267,8 +302,9 @@
                   <!-- <span class="fa fa-gamepad"></span> -->
                   <img src="img/message.png" width="50%">
                   <h2 class="title-f">Active Voice Interaction</h2>
-                  <p>Interact with user via voice.</p>
                 </div>
+                <p>Interact with user via voice.</p>
+
               </div>
             </div>
           </div>
@@ -281,8 +317,9 @@
                 <div class="icon-hover" id="privacy">
                   <img src="img/privacy.png" width="50%">
                   <h2 class="title-f">Privacy Preserving</h2>
-                  <p>Protect users’ privacy form source.</p>
                 </div>
+                <p>Protect your personal information from exposure.</p>
+
               </div>
             </div>
           </div>
@@ -293,68 +330,74 @@
   </section>
   <!--/ Device Features End /-->
 
-  <!--/ App Features Star /-->
-  <section class="section-services section-t8">
+  <!--/ Intro Single star /-->
+  <section class="intro-single-f">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <div class="title-wrap d-flex justify-content-between">
-              <div class="title-box">
-                <h2 class="title-a">APP Features</h2>
-              </div>
+          <div class="col-md-12 col-lg-8">
+            <div class="title-single-box">
+              <h1 class="title-single">APP Features</h1>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card-box-c foo">
-              <div class="card-header-c">
-                <div class="card-box-ico justify-content-center">
-                  <!-- <span class="fa fa-gamepad"></span> -->
-                  <div class="icon-hover" id="summary">
-                    <img src="img/summarize.png" width="50%">
-                    <h2 class="title-f">Summary Report</h2>
-                    <p>Log users’ activities.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card-box-c foo">
-              <div class="card-header-c">
-                <div class="card-box-ico justify-content-center">
-                  <div class="icon-hover" id="personal">
-                    <!-- <span class="fa fa-gamepad"></span> -->
-                    <img src="img/calendar.png" width="50%">
-                    <h2 class="title-f">Personalized Service</h2>
-                    <p>Import your calendar, remind you the important schedule.</p>
-                  </div>
-                </div>
-  
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card-box-c foo">
-              <div class="card-header-c">
-                <div class="card-box-ico justify-content-center">
-                  <div class="icon-hover" id="extendable">
-                    <!-- <span class="fa fa-gamepad"></span> -->
-                    <img src="img/human.png" width="50%">
-                    <h2 class="title-f">Extendable Services</h2>
-                    <p> Connect to extend service such as order in, transport service, home clean etc.</p>
-                  </div>
-                </div>
-  
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       </div>
     </section>
-    <!--/ App Features End /-->
+    <!--/ Intro Single End /-->
+
+  <!--/ App Features Star /-->
+  <section class="section-services section-b3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <div class="icon-hover" id="summary">
+                  <img src="img/summarize.png" width="50%">
+                  <h2 class="title-f">Summary Report</h2>
+                </div>
+                <p>Remind users of their activities.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <div class="icon-hover" id="personal">
+                  <!-- <span class="fa fa-gamepad"></span> -->
+                  <img src="img/calendar.png" width="50%">
+                  <h2 class="title-f">Personalized Service</h2>
+                </div>
+                <p>Remind you of important events by intergrating your calendar.</p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <div class="icon-hover" id="extendable">
+                  <!-- <span class="fa fa-gamepad"></span> -->
+                  <img src="img/human.png" width="50%">
+                  <h2 class="title-f">Extendable Services</h2>
+                </div>
+                <p> Connect to services such as food delivery, ticket booking, etc.</p>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <!--/ App Features End /-->
 
   <!--/ Application Star /-->
   <!-- <section class="section-news section-t8 section-b2">
