--- a/index.html
+++ b/index.html
@@ -77,12 +77,9 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="intro-body">
-                    <h1 class="intro-title mb-2">
-                      CarePLUS not only looks after your loved ones
-                    </h1>
-                    <h1 class="intro-title mb-2" style="color: #d1d1d1;">
-                      but also helps them live more convenient and easy lives.
-                    </h1>
+                      <h3 class="intro-title mb-2 mt-4">
+                          CarePLUS makes seniors' lives more convenient.
+                        </h3>
                   </div>
                 </div>
               </div>
@@ -96,40 +93,20 @@
 
   <!--/ Intro Single star /-->
   <section class="intro-single-f">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-lg-8">
-            <div class="title-single-box">
-              <h1 class="title-single">Our mission </h1>
-            </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-12">
+          <div class="title-single-box">
+            <h1 class="title-single">Our Mission </h1>
           </div>
+          <h3 class="intro-title mb-2 mt-4" style="color: #808080;">
+              CarePLUS not only looks after your loved ones but also helps them live more convenient and easy lives.
+            </h3>
         </div>
       </div>
-    </section>
-    <!--/ Intro Single End /-->
-
-  <!--/ Goal Star /-->
-  <section class="section-goal">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="about-img-box">
-              <img src="img/goal.png" alt="" class="img-fluid">
-            </div>
-            <div class="sinse-box">
-              <h3 class="sinse-title">Device
-                <br>& APP</h3>
-            </div>
-          </div>
-          <div class="col-sm-12 mt-4">
-            <p>
-              To be continued.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--/ Goal End /-->
+    </div>
+  </section>
+  <!--/ Intro Single End /-->
 
   <!--/ Intro Single star /-->
   <section class="intro-single-f">
@@ -137,13 +114,50 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single">How CarePLUS works</h1>
+              <h1 class="title-single">Our Product</h1>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!--/ Intro Single End /-->
+  <!--/ Intro Single End /-->
+
+  <!--/ Goal Star /-->
+  <section class="section-goal">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="about-img-box">
+            <img src="img/goal.png" alt="" class="img-fluid">
+          </div>
+          <div class="sinse-box">
+            <h3 class="sinse-title">Device
+              <br>& APP</h3>
+          </div>
+        </div>
+        <div class="col-sm-12 mt-4">
+          <p>
+            To be continued.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Goal End /-->
+
+  <!--/ Intro Single star /-->
+  <section class="intro-single-f">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-8">
+          <div class="title-single-box">
+            <h1 class="title-single">How CarePLUS Works</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Intro Single End /-->
 
   <!--/ Installation Star /-->
   <section class="section-services">
@@ -207,17 +221,17 @@
 
   <!--/ Intro Single star /-->
   <section class="intro-single-f">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-lg-8">
-            <div class="title-single-box">
-              <h1 class="title-single">Technique</h1>
-            </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-8">
+          <div class="title-single-box">
+            <h1 class="title-single">Technique</h1>
           </div>
         </div>
       </div>
-    </section>
-    <!--/ Intro Single End /-->
+    </div>
+  </section>
+  <!--/ Intro Single End /-->
 
   <!--/ Technique Star /-->
   <section class="section-services">
@@ -264,17 +278,17 @@
 
   <!--/ Intro Single star /-->
   <section class="intro-single-f">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-lg-8">
-            <div class="title-single-box">
-              <h1 class="title-single">Device Features</h1>
-            </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-8">
+          <div class="title-single-box">
+            <h1 class="title-single">Device Features</h1>
           </div>
         </div>
       </div>
-    </section>
-    <!--/ Intro Single End /-->
+    </div>
+  </section>
+  <!--/ Intro Single End /-->
 
   <!--/ Device Features Star /-->
   <section class="section-services">
@@ -285,9 +299,9 @@
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                  <div class="icon-hover" id="panorama">
-                    <img src="img/panorama.png" width="50%">
-                    <h2 class="title-f">360 Panorama</h2>
+                <div class="icon-hover" id="panorama">
+                  <img src="img/panorama.png" width="50%">
+                  <h2 class="title-f">360 Panorama</h2>
                 </div>
                 <p>Seeing all entrance.</p>
               </div>
@@ -332,17 +346,17 @@
 
   <!--/ Intro Single star /-->
   <section class="intro-single-f">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-lg-8">
-            <div class="title-single-box">
-              <h1 class="title-single">APP Features</h1>
-            </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-8">
+          <div class="title-single-box">
+            <h1 class="title-single">APP Features</h1>
           </div>
         </div>
       </div>
-    </section>
-    <!--/ Intro Single End /-->
+    </div>
+  </section>
+  <!--/ Intro Single End /-->
 
   <!--/ App Features Star /-->
   <section class="section-services section-b3">
