--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <!--/ Nav Star /-->
   <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
-    <div class="container">
+    <div class="container navbar-container">
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -79,7 +79,7 @@
                   <div class="intro-body">
                       <h3 class="intro-title mb-2 mt-4">
                           CarePLUS makes seniors' lives more convenient.
-                        </h3>
+                      </h3>
                   </div>
                 </div>
               </div>
@@ -101,7 +101,7 @@
           </div>
           <h3 class="intro-title mb-2 mt-4" style="color: #808080;">
               CarePLUS not only looks after your loved ones but also helps them live more convenient and easy lives.
-            </h3>
+          </h3>
         </div>
       </div>
     </div>
@@ -303,7 +303,7 @@
                   <img src="img/panorama.png" width="50%">
                   <h2 class="title-f">360 Panorama</h2>
                 </div>
-                <p>Seeing all entrance.</p>
+                <p>Provide wider field of view and cover all entrances.</p>
               </div>
             </div>
           </div>
@@ -315,10 +315,9 @@
                 <div class="icon-hover" id="voice">
                   <!-- <span class="fa fa-gamepad"></span> -->
                   <img src="img/message.png" width="50%">
-                  <h2 class="title-f">Active Voice Interaction</h2>
+                  <h2 class="title-f">Voice Interaction</h2>
                 </div>
-                <p>Interact with user via voice.</p>
-
+                <p>Interact with you proactively through voice.</p>
               </div>
             </div>
           </div>
@@ -371,7 +370,7 @@
                   <img src="img/summarize.png" width="50%">
                   <h2 class="title-f">Summary Report</h2>
                 </div>
-                <p>Remind users of their activities.</p>
+                <p>Analyze senior's daliy activities and generate report.</p>
               </div>
             </div>
           </div>
