update banner content

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="intro-body">
-                      <h3 class="intro-title mb-2 mt-4">
-                          CarePLUS makes seniors' lives more convenient.
+                      <h3 class="intro-title mb-2 mt-4" style="text-transform:uppercase">
+                        Restoring Independence, Improving Lives, Caring Plus.
                       </h3>
                   </div>
                 </div>
