--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div class="card-header-c">
               <div class="card-box-ico card-box-tech justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/technique_003.png">
+                <img src="img/technique_003.jpg">
                 <h2 class="title-f">Human-centered AI</h2>
               </div>
             </div>
