update product gif

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="about-img-box">
-            <img src="img/product.jpg" alt="" class="img-fluid">
+            <img src="img/product.gif" alt="" class="img-fluid">
           </div>
           <div class="sinse-box">
             <h3 class="sinse-title">Device
