fix content error

--- a/about.html
+++ b/about.html
@@ -97,12 +97,12 @@
         </div>
         <div class="col-sm-12 mt-4">
           <p>
-            The world faces a looming threat that the population is aging rapidly. The statics provided by WPP indicates
+            The world faces a looming threat that the population is aging rapidly. The statistics provided by WPP indicates
             the world's population over 65 years old is rising. However, many people can't give the elderly enough
-            attention because of their busy work or personal life.
+            attention because of their busy works or personal lives.
           </p>
           <p>
-            To solve the problems, Bevi develope CarePLUS, a home care assistant.
+            To solve the problems, BeVi developes CarePLUS, a home care assistant.
             This assistant can take care of your elderly family members at any moment without leakage of your personal
             information. CarePLUS also provides intelligent functions to help seniors live their lives with more
             convenience and ease.
