Update Contact information.
information update.
- New E-mail address: aicareplus@gmail.com
- New FB page : https://www.facebook.com/CarePLUSai

--- a/contact.html
+++ b/contact.html
@@ -215,8 +215,8 @@
           <div class="row">
             <div class="col-md-12">
               <p>PHONE: +886 933587882</p>
-              <p>EMAIL: bevitw@gmail.com</p>
-              <p>SOCIAL NETWORKS: <a class="fa fa-facebook" href="https://www.facebook.com/bevitaiwan/"></a></p>
+              <p>EMAIL: aicareplus@gmail.com</p>
+              <p>SOCIAL NETWORKS: <a class="fa fa-facebook" href="https://www.facebook.com/CarePLUSai"></a></p>
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
       <div class="row">
         <div class="col-md-12">
           <p>PHONE: +886 933587882</p>
-          <p>EMAIL: bevitw@gmail.com</p>
+          <p>EMAIL: aicareplus@gmail.com</p>
           <div class="copyright-footer">
             <p class="copyright color-text-a">
               &copy; Copyright
